added assessment parametr to GET /reviews routes
